Final changes and history pages