@@ -1,28 +1,24 @@
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.*;
 import java.util.concurrent.*;
 
 @SuppressWarnings("BooleanMethodIsAlwaysInverted")
 public class BankAutomated
 {
-    List<CA> customerAccounts = Collections.synchronizedList(new ArrayList<CA>());
+    List<CA> customerAccounts = Collections.synchronizedList(new ArrayList<>());
     private final ConcurrentHashMap<String, CA> customerHash = new ConcurrentHashMap<>();
-    private final ExecutorService executor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
     ArrayList<AD> admins = new ArrayList<>();
     ArrayList<MT> maintenanceTeam = new ArrayList<>();
     ArrayList<CSR> customerService = new ArrayList<>();
-
-    @SuppressWarnings("SpellCheckingInspection")
-    public enum State {NOTIFSET, PRIVSET, EDITPROF, CHEQHIST, SAVHIST}
 
     /*
      * Constructor for BankAutomated to be used for the TestCase (for the JUnit test cases)
      * This prevents the people.ser file from interfering with the test case results
      */
-    public BankAutomated(boolean Test){
+    public BankAutomated(boolean ignoredTest){
         AD admin = new AD("Mister", "Admin", "admin@BCS.ca", "1234567890", 0);
         AD admin2 = new AD("Mister", "Admin2", "admin2@BCS.ca", "1112223333", 1);
         AD admin3 = new AD("Mister", "Admin3", "admin3@BCS.ca", "2223334444", 2);
@@ -101,6 +97,7 @@ public class BankAutomated
             // Submit each account to the executor for processing
             List<Future<Void>> futures = new ArrayList<>();
             for (CA account : accounts) {
+                ExecutorService executor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
                 futures.add(executor.submit(() -> {
                     customerAccounts.add(account);
                     customerHash.put(account.email, account);
@@ -144,10 +141,11 @@ public class BankAutomated
         try {
 
             // Delete the file
-            Files.deleteIfExists(Paths.get("People.ser"));
+            Path of = Path.of("People.ser");
+            Files.deleteIfExists(of);
     
             // Create a new empty file
-            Files.createFile(Paths.get("People.ser"));
+            Files.createFile(of);
             
             // Print a message
             System.out.println("Cleared People.ser file");
@@ -396,17 +394,17 @@ public class BankAutomated
      * If the account was not created successfully, then it returns null.
      * The account is not created successfully if the email is already in use, if the email is not valid, if the password is not valid,
      * or if the card number is not valid.
-     * @param String firstName The first name of the customer
-     * @param String lastName The last name of the customer
-     * @param String phoneNum The phone number of the customer
-     * @param String address The address of the customer
-     * @param String gender Gender of the customer
-     * @param String dob Date of birth of the customer
-     * @param String email Email of the customer
-     * @param String password Password of the customer
-     * @param String cardNum Card number of the customer
-     * @param String cardExpiry Expiry date of the card
-     * @param String cvv CVV of the card
+     * @param String firstName: The first name of the customer
+     * @param String lastName: The last name of the customer
+     * @param String phoneNum: The phone number of the customer
+     * @param String address: The address of the customer
+     * @param String gender: Gender of the customer
+     * @param String dob: Date of birth of the customer
+     * @param String email: Email of the customer
+     * @param String password: Password of the customer
+     * @param String cardNum: Card number of the customer
+     * @param String cardExpiry: Expiry date of the card
+     * @param String cvv: CVV of the card
      * @return CA The new customer account if it was created successfully, null otherwise
      * 
      */
@@ -459,7 +457,7 @@ public class BankAutomated
      * @return boolean True if the request was made successfully, false otherwise
      * 
      */
-    public boolean makeRequest(CA customer, String type, String str) {
+    public void makeRequest(CA customer, String type, String str) {
 
         Request request;
 
@@ -486,12 +484,10 @@ public class BankAutomated
                 csr.addRequest(request);
                 break;
             default:
-                return false;
+                return;
         }
 
         customer.addRequests(request);
-
-        return true;
 
     }
 
@@ -511,7 +507,9 @@ public class BankAutomated
             return 2;
         }
 
-        // If the transfer amount is negative, then return 1
+        Random rand = new Random();
+        int idSender = rand.nextInt(500);
+        int idReceiver = rand.nextInt(500);
         if (fromAccount.equals("Chequing")) {
 
             if (transferAmount > customer.getChequing()) {
@@ -519,10 +517,15 @@ public class BankAutomated
                 return 1;
 
             }
+            Transaction transaction = new Transaction("Chequing", "Savings", transferAmount,idSender);
+            transaction.setAccountFrom("Chequing");
+            transaction.setSenderRemaining(customer.getChequing() - transferAmount);
+            transaction.setReceiverRemaining(customer.getSavings() + transferAmount);
 
             customer.setChequing(customer.getChequing() - transferAmount);
             customer.setSavings(customer.getSavings() + transferAmount);
-            customer.addSaving(new Transaction("Chequing", "Savings", transferAmount,1));
+            customer.addChequing(transaction);
+            customer.addSaving(transaction);
 
         } else {
 
@@ -532,9 +535,15 @@ public class BankAutomated
                 
             }
 
+            Transaction transaction = new Transaction("Savings", "Chequing", transferAmount, idReceiver);
+            transaction.setAccountFrom("Savings");
+            transaction.setSenderRemaining(customer.getChequing() - transferAmount);
+            transaction.setReceiverRemaining(customer.getSavings() + transferAmount);
+
             customer.setChequing(customer.getChequing() + transferAmount);
             customer.setSavings(customer.getSavings() - transferAmount);
-            customer.addChequing(new Transaction("Chequing", "Savings", transferAmount,1));
+            customer.addChequing(transaction);
+            customer.addSaving(transaction);
 
         }
         return 0;
@@ -583,34 +592,57 @@ public class BankAutomated
         // If all checks pass, transfer the money and receiver's account is valid
         else
         {
+            Random rand = new Random();
+            int idSender = rand.nextInt(500);
+            int idReceiver = rand.nextInt(500);
             if (receiverAccount == null) {
+                Transaction transaction = new Transaction(customer.email, receiverEmail, amount, idSender);
                 if (accountFrom.equals("Chequing"))
                 {
+                    transaction.setAccountFrom("Chequing");
+                    transaction.setSenderRemaining(customer.getChequing() - amount);
+
                     customer.setChequing(customer.getChequing() - amount);
-                    customer.addChequing(new Transaction(customer.email, receiverEmail, amount,1));
+                    customer.addChequing(transaction);
                 }
                 else
                 {
+                    transaction.setAccountFrom("Savings");
+                    transaction.setSenderRemaining(customer.getChequing() - amount);
+
                     customer.setSavings(customer.getSavings() - amount);
-                    customer.addSaving(new Transaction(customer.email, receiverEmail, amount,1));
+                    customer.addSaving(transaction);
                 }
                 return 3;
             }
             else
             {
+                Transaction senderTransaction = new Transaction(customer.email, receiverEmail, amount, idSender);
                 if (accountFrom.equals("Chequing"))
                 {
+                    senderTransaction.setAccountFrom("Chequing");
+
+                    Transaction receiverTransaction = new Transaction(customer.email, receiverEmail, amount, idReceiver);
+                    senderTransaction.setSenderRemaining(customer.getChequing() - amount);
+                    receiverTransaction.setReceiverRemaining(customer.getSavings() + amount);
+
                     customer.setChequing(customer.getChequing() - amount);
-                    customer.addChequing(new Transaction(customer.email, receiverEmail, amount,1));
+                    customer.addChequing(senderTransaction);
                     receiverAccount.setChequing(receiverAccount.getChequing() + amount);
-                    receiverAccount.addChequing(new Transaction(customer.email, receiverEmail, amount,1));
+                    receiverAccount.addChequing(receiverTransaction);
                 }
                 else
                 {
+                    senderTransaction.setAccountFrom("Savings");
+
+                    Transaction receiverTransaction = new Transaction(customer.email, receiverEmail, amount, idReceiver);
+                    senderTransaction.setSenderRemaining(customer.getChequing() - amount);
+                    receiverTransaction.setReceiverRemaining(customer.getSavings() + amount);
+
                     customer.setSavings(customer.getSavings() - amount);
-                    customer.addSaving(new Transaction(customer.email, receiverEmail, amount,1));
-                    receiverAccount.setSavings(receiverAccount.getSavings() + amount);
-                    receiverAccount.addSaving(new Transaction(customer.email, receiverEmail, amount,1));
+                    customer.addSaving(senderTransaction);
+                    receiverAccount.setChequing(receiverAccount.getChequing() + amount);
+                    receiverAccount.addChequing(receiverTransaction);
 
                 }
             }
@@ -668,24 +700,35 @@ public class BankAutomated
 
             }
         }
-    
+
+        Random rand = new Random();
+        int idSender = rand.nextInt(500);
+        int idReceiver = rand.nextInt(500);
+
         // Subtract the amount from the customer's account and add it to the receiver's account (chequing / savings)
         if (accountFrom.equals("Chequing")) {
+            Transaction transaction = new Transaction(customer.firstName + " " + customer.lastName, receiverAcc, amount,idSender);
+            transaction.setAccountFrom("Chequing");
+            transaction.setSenderRemaining(customer.getChequing() - amount);
 
             customer.setChequing(customer.getChequing() - amount);
-            customer.addChequing(new Transaction(customer.firstName + " " + customer.lastName, receiverAcc, amount,3));
+            customer.addChequing(transaction);
         } else if (accountFrom.equals("Savings")) {
+            Transaction transaction = new Transaction(customer.firstName + " " + customer.lastName, receiverAcc, amount,idSender);
+            transaction.setAccountFrom("Savings");
+            transaction.setSenderRemaining(customer.getChequing() - amount);
 
             customer.setSavings(customer.getSavings() - amount);
-            customer.addSaving(new Transaction(customer.firstName + " " + customer.lastName, receiverAcc, amount,4));
-
+            customer.addSaving(transaction);
         }// Add the amount to the receiver's account (chequing auto-deposit)
         if (receiver != null){
+            Transaction receiverTrans = new Transaction(customer.firstName + " " + customer.lastName, receiverAcc, amount,idReceiver);
+            receiverTrans.setReceiverRemaining(customer.getSavings() + amount);
+
             receiver.setChequing(receiver.getChequing() + amount);
-            receiver.addChequing(new Transaction(customer.firstName + " " + customer.lastName, receiverAcc, amount,3));
+            receiver.addChequing(receiverTrans);
 
             return 0;
-
         }
         else
         {
@@ -700,7 +743,7 @@ public class BankAutomated
      * 
      */
     public ArrayList<String> addresses() {
-        ArrayList<String> locationList = new ArrayList<String>();
+        ArrayList<String> locationList = new ArrayList<>();
 
         locationList.add("10153 King George Blvd, Vancouver, BC");
         locationList.add("255 Yonge Street, Toronto, ON");
@@ -773,9 +816,6 @@ public class BankAutomated
         double timePassedSeconds = (endTime - startTime) / 1000.0;
 
         System.out.println("Uploaded " + customerAccounts.size() + " customer objects. In: " + timePassedSeconds + "s");
-
-        // IMPORTANT: REMOVE THIS LATER THIS IS FOR RUNNING PURPOSES
-        clearPeopleFile();
 
         executor.shutdown();
 
